# crude-engine

./: !  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.txt  compile_commands.json  test_vulkan
crude_editor/: CMakeLists.txt
crude_editor/resources/: Arcade.vks  Bistro_outside.vks  alpha_blend_mode.glb  attenuation_test.glb  attribution.txt  box_textured.glb  clear_coat_car_paint.glb  emissive_strength.glb  environment_test.glb  iridescence_lamp.glb  morph_primitives.glb  normal_tangent_test_1.glb  normal_tangent_test_2.glb
crude_editor/resources/main1_sponza/: NewSponza_Main_glTF_003.gltf
crude_editor/source/: CMakeLists.txt  application.cpp  application.ixx  main.cpp
crude_editor/source/gui/: CMakeLists.txt  imgui_editor_layout_draw_system.cpp  imgui_editor_layout_draw_system.ixx
crude_engine/: CMakeLists.txt  crude_engine.ixx  engine.cpp  engine.ixx
crude_engine/core/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  algorithms.inl  algorithms.ixx  alias.hpp  alias.ixx  aligned_allocator.ixx  array_dynamic.hpp  array_dynamic.inl  array_stack.hpp  array_stack.inl  array_unsafe.hpp  array_unsafe.inl  assert.cpp  assert.hpp  assert.ixx  bs_tree.cpp  bs_tree.hpp  bs_tree.inl  bs_tree.ixx  bs_tree_decl.ixx  bs_tree_def.ixx  byte_utils.ixx  compare.ixx  core.cpp  core.hpp  cxx_allocator.cpp  cxx_allocator.hpp  cxx_allocator.inl  cxx_allocator_container.cpp  cxx_allocator_container.hpp  cxx_allocator_container.ixx  debug.hpp  debug.ixx  filesystem.cpp  filesystem.hpp  filesystem.ixx  free_rbt_allocator.cpp  free_rbt_allocator.hpp  (+95 more)
crude_engine/ecs/: CMakeLists.txt  alias.hpp  alias.ixx  archetype.cpp  archetype.hpp  archetype.ixx  component_container.hpp  component_container.inl  component_container.ixx  component_register.cpp  component_register.hpp  component_register.inl  component_register.ixx  entity.cpp  entity.hpp  entity.inl  entity.ixx  id_manager.cpp  id_manager.hpp  id_manager.ixx  query.cpp  query.hpp  query.inl  query.ixx  world.cpp  world.hpp  world.inl  world.ixx
crude_engine/graphics/: CMakeLists.txt  application.cpp  application.ixx  attachment_description.cpp  attachment_description.ixx  attachment_load_store_op.ixx  buffer.cpp  buffer.ixx  buffer_dependent.ixx  buffer_descriptor.cpp  buffer_descriptor.ixx  camera_gpu.ixx  camera_ubo.ixx  color_blend_state_create_info.cpp  color_blend_state_create_info.ixx  command_buffer.cpp  command_buffer.ixx  command_pool.cpp  command_pool.ixx  debug_utils_messenger.cpp  debug_utils_messenger.ixx  deferred_gbuffer_pass_system.cpp  deferred_gbuffer_pass_system.ixx  deferred_pbr_pass_system.cpp  deferred_pbr_pass_system.ixx  depth_stencil_state_create_info.cpp  depth_stencil_state_create_info.ixx  descriptor_buffer_info.cpp  descriptor_buffer_info.ixx  descriptor_image_info.cpp  descriptor_image_info.ixx  descriptor_pool.cpp  descriptor_pool.ixx  descriptor_pool_size.ixx  descriptor_set.cpp  descriptor_set.ixx  descriptor_set_layout.cpp  descriptor_set_layout.ixx  descriptor_set_layout_binding.ixx  device.cpp  (+158 more)
crude_engine/gui/: CMakeLists.txt  imgui_demo_layout_draw_system.ixx  imgui_helper.cpp  imgui_helper.ixx  imgui_input_system.ixx  imgui_layout_component.ixx  imgui_renderer_pass_system.cpp  imgui_renderer_pass_system.ixx  imgui_texture_descriptor_set.cpp  imgui_texture_descriptor_set.ixx  renderer_imgui_pass_system.cpp  renderer_imgui_pass_system.ixx
crude_engine/math/: CMakeLists.txt  constants.ixx  convert.cpp  convert.ixx  fuicont.ixx  matrix.cpp  matrix.hpp  matrix.ixx  scalar.cpp  scalar.hpp  scalar.ixx  vector.cpp  vector.hpp  vector.ixx
crude_engine/network/: CMakeLists.txt  network_system.cpp  network_system.ixx  socket_address.cpp  socket_address.hpp  socket_address.ixx  socket_address_factory.cpp  socket_address_factory.ixx  socket_handle.hpp  socket_impl.hpp  socket_impl_win32.cpp  socket_util.cpp  socket_util.hpp  socket_util.ixx  tcp_socket.cpp  tcp_socket.hpp  tcp_socket.ixx  udp_socket.cpp  udp_socket.hpp  udp_socket.ixx
crude_engine/platform/: CMakeLists.txt  input_system.ixx  sdl_helper.cpp  sdl_helper.ixx  sdl_window_container.cpp  sdl_window_container.ixx
crude_engine/resources/: CMakeLists.txt  gltf_loader.cpp  gltf_loader.ixx  gltf_loader_system.cpp  gltf_loader_system.ixx  gltf_model_loader_system.cpp  gltf_model_loader_system.ixx  image_loader.ixx  scene_loader_saver_system.cpp  scene_loader_saver_system.ixx  vks_loader_system.cpp  vks_loader_system.ixx  world_loader.ixx
crude_engine/scene/: CMakeLists.txt  camera.cpp  camera.ixx  component.ixx  free_camera_script.cpp  free_camera_script.ixx  image.ixx  index.ixx  index_cpu.ixx  light.ixx  mesh.ixx  meshlet.ixx  model_geometry.ixx  node.cpp  node.ixx  scene.ixx  transform.cpp  transform.ixx  vertex.ixx  vertex_cpu.ixx  window_script.ixx  world.ixx
crude_engine/scripts/: CMakeLists.txt  free_camera_script.cpp  free_camera_script.ixx  window_script.ixx
crude_engine/system/: CMakeLists.txt  input_system.ixx  keyboard_event.ixx  keyboard_event_handler.cpp  keyboard_event_handler.ixx  mouse_event.ixx  mouse_event_handler.cpp  mouse_event_handler.ixx  sdl_helper.cpp  sdl_helper.ixx  sdl_io_manager.cpp  sdl_io_manager.ixx  sdl_system.cpp  sdl_system.ixx  sdl_window_container.cpp  sdl_window_container.ixx  window.cpp  window.ixx  window_event.ixx  window_event_handler.cpp  window_event_handler.ixx
crude_engine/utils/: CMakeLists.txt  image_loader.cpp  image_loader.ixx
crude_extlibs/imgui_cmake/: CMakeLists.txt
crude_extlibs/imguizmo_cmake/: CMakeLists.txt
crude_extlibs/stb_cmake/: CMakeLists.txt
crude_shaders/: CMakeLists.txt  compile_shader.cmake  compile_spirv_shader.cmake  config.h  create_shader_header.cmake  mesh.h  shader.frag  shader.frag.inl  shader.mesh  shader.task  shader_data.inl.in
crude_shaders/source/: config.h  deferred_gbuffer.frag  deferred_gbuffer.mesh  deferred_gbuffer.task  deferred_gbuffer_color.frag  deferred_gbuffer_color.mesh  fullscreen.mesh  fullscreen_pbr.frag  hit.rchit  mesh.h  miss.rmiss  point_shadow.mesh  point_shadow.task  trace.rgen
test/: main.cpp  (+3 more)
(+1523 files in other folders)
